fdo#74857: Update the incrementer when skipping over hidden regions.

Otherwise it would over-shoot.

Change-Id: I1f9741345dfe353e0b035ff3bead736ab3fccbef